--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,23 +2,37 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="utf8mb4_unicode_ci">
     <title>Register</title>
 </head>
 <body>
 <form action="#" th:action="@{/register}" th:object="${user}" method="post">
     <table>
         <tr>
-            <td><label for="username">First Name</label></td>
-            <td><input th:field="*{username}" type="text" name="firstName"></input></td>
+            <td><label for="username">Username</label></td>
+            <td><input th:field="*{username}" type="text" name="userName"></input></td>
         </tr>
 
         <tr>
             <td><label for="email">Email</label></td>
             <td><input th:field="*{email}" type="text" name="emailId"></input></td>
         </tr>
+
         <tr>
             <td><label for="password">Password</label></td>
             <td><input th:field="*{password}" type="password" name="password"></input></td>
+        </tr>
+<!--        <tr>-->
+<!--            <td><label for="passwordConfirm">Password Confirm</label></td>-->
+<!--            <td><input th:field="*{passwordConfirm}" type="password" name="passwordConfirm"></td>-->
+<!--        </tr>-->
+        <tr>
+            <td><label for="firstName">First name</label></td>
+            <td><input th:field="*{firstName}" type="text" name="firstName"/></td>
+        </tr>
+        <tr>
+            <td><label for="lastName">Last name</label></td>
+            <td><input th:field="*{lastName}" type="text" name="lastName"/></td>
         </tr>
         <tr>
             <td><input type="reset" value="Clear"/></td>
