--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
     <center>
