--- a/src/main/resources/templates/successfulRegisteration.html
+++ b/src/main/resources/templates/successfulRegisteration.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Registration Success</title>
+    <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
 <center>
