--- a/src/main/resources/templates/accountVerified.html
+++ b/src/main/resources/templates/accountVerified.html
@@ -4,12 +4,14 @@
     <head>
         <title>Congratulations!</title>
         <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
     </head>
     <body>
         <center>
             <h3>Congratulations! Your account has been activated and email is verified!</h3>
-            <br /><br />
-            <a th:href="@{/login}"><h3>Log in</h3></th:href>
+            <div class="msg">
+                <a th:href="@{/login}">Log in</a>
+            </div>
         </center>
     </body>
 </html>
