--- a/src/main/resources/templates/successfulRegisteration.html
+++ b/src/main/resources/templates/successfulRegisteration.html
@@ -4,6 +4,7 @@
 <head>
     <title>Registration Success</title>
     <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
 <body>
 <center>
