Upgrade LectureController.java #6

--- a/src/main/resources/templates/create-lecture.html
+++ b/src/main/resources/templates/create-lecture.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create lecture</title>
-</head>
-<body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="utf8mb4_unicode_ci">
+        <title>Create lecture</title>
+        <link href="../static/css/main.css" th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
 
-</body>
+        <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
+
+        
+    </head>
+    <body>
+        <div id="container">
+            <div class="msg">
+                <P>Add lecture</P>
+            </div>
+            <form th:action="@{/admin/create-lecture}" th:object="${lecture}" method="post">
+                <label for="title"></label>
+                <input th:field="*{title}" type="text" name="title" placeholder="title"/>
+                
+                <label for="speakers"></label>
+                <input th:field="*{speakers}" type="text" name="speakers" placeholder="speakers"/>         
+                  
+                <label for="address"></label>
+                <input th:field="*{address}" type="text" name="address" placeholder="address"/>
+                   
+                <label for="date"></label>
+                <input th:field="*{date}" type="datetime-local" name="date"/>
+               
+
+                <input type="submit" value="Submit"/>
+
+             
+                
+                <input type="reset" value="Clear"/>
+            </form>
+        </div>
+    </body>
 </html>
