--- a/src/main/resources/templates/lectureList.html
+++ b/src/main/resources/templates/lectureList.html
@@ -31,7 +31,7 @@
                     th:text=${pageNumber}
                     th:class="${pageNumber==lecturesPage.number + 1} ? active"></a>
                 </div>
-                <div style="clear: both"></div>
+                <div style="clear: both"/>
             </div>
         </div>
     </body>
