--- a/src/main/resources/templates/lectureList.html
+++ b/src/main/resources/templates/lectureList.html
@@ -8,7 +8,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header>
+        
+            <div th:replace="index::mainheader"></div>
+        
+        </header>
         <div class="large-container">
+           
+<!--
             <table>
                 <thead>
                     <tr>
@@ -33,6 +40,7 @@
                 </div>
                 <div style="clear: both"/>
             </div>
+-->
         </div>
     </body>
 </html>
