Add comments service and displaying them on lecture page

--- a/src/main/resources/templates/lecture-details.html
+++ b/src/main/resources/templates/lecture-details.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Lecture details</title>
          <link href="../static/css/main.css" th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
+        
+        <link href="../static/css/fontello.css" th:href="@{/css/fontello.css}" rel="stylesheet" type="text/css"/>
 
         <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
     </head>
@@ -22,7 +24,28 @@
             <p th:text="${lecture.lectureStatusType}"></p>
             <br />
             <br />
+            
             <p th:text='${lecture.description}'></p>
+            
+            <div class="comments">
+                
+                    <div class="comment" th:each="comment : ${lecture.comments}">
+                        <div class="avatar" >
+                            <i class="demo-icon icon-user-circle-o"></i>
+                        </div>
+                        <div class="details" >
+                            <div class="author" th:text="${comment.creatorUser.username}"></div>
+                            <div class="content" th:text="${comment.content}"></div>
+                        </div>
+                        <div style="clear: both;"></div>
+                    </div>
+                
+            
+                <form th:action="@{'/lectures/' + ${lecture.id} + '/comments'}" th:object="${comment}" method="post">
+                    <textarea th:field="*{content}" type="text" name="content"/>
+                    <input type="submit" value="Submit"/>
+                </form>
+            </div>
         </div>
     </body>
 </html>
