--- a/src/main/resources/templates/comment-edit.html
+++ b/src/main/resources/templates/comment-edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
-        <title>Lecture details</title>
+        <title>Comment edit</title>
          <link href="../static/css/main.css" th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
         
         <link href="../static/css/fontello.css" th:href="@{/css/fontello.css}" rel="stylesheet" type="text/css"/>
@@ -15,42 +15,34 @@
             <div th:replace="index::mainheader"></div>
         
         </header>
-        <div class="large-container" th:object="${lecture}">
-            <h2><p th:text="${lecture.title}"></p></h2>
-            <p><a th:href="@{'/users/' + ${lecture.speaker.id}}" th:text="*{speaker.firstName + ' ' + speaker.lastName}" /></p>
-            <p th:text="${lecture.date}"></p>
-            <p th:text="${lecture.address}"></p>
-            <p th:text="'Attendees: ' + ${#sets.size(lecture.attendees)}">0</p>
-            <p th:text="${lecture.lectureStatusType}"></p>
-            <p><a th:href="@{'/lectures/' + ${lecture.id} + '/signin' }" th:text="'Sign in'"/></p>
-            <br />
-            <br />
+        <div class="large-container" >
             
-            <p th:text='${lecture.description}'></p>
             
             <div class="comments">
                 
+<!--
                 <div class="comment" th:each="comment : ${lecture.comments}">
                     <div class="avatar" >
                         <i class="demo-icon icon-user-circle-o"></i>
                     </div>
                     <div class="details" >
                         <div class="author"> 
-                            <a th:href="@{'/users/' + ${comment.author.id}}" th:text="${comment.author.username}"/></div>
+                            <a th:href="@{'/users/' + ${comment.creatorUser.id}}" th:text="${comment.creatorUser.username}"/></div>
                         <div class="content" th:text="${comment.content}"></div>
                     </div>
-                    <div style="float: left;" th:if="${#authentication.name == comment.author.username}">
-                        <a th:href="@{'/lectures/' + ${lecture.id} + '/comments/' + ${comment.id}}" th:text="edit"/>
+                    <div style="float: left;" th:if="${#authentication.name == comment.creatorUser.username}">
+                        <a th:href="@{'/comments/' + ${comment.id}}" th:text="edit"/>
                     </div>
                     <div style="clear: both;"></div>
                 </div>
+-->
                 <div class="madeComment">
                     <div class="avatar" >
                         <i class="demo-icon icon-user-circle-o"></i>
                     </div>
                     <div class="details2">
-                        <form th:action="@{'/lectures/' + ${lecture.id} + '/comments'}" th:object="${comment}" method="post">
-                            <textarea class="textComment" th:field="*{content}" type="text" name="content" placeholder="Add comment..."/>
+                        <form th:action="@{'/lectures/' + ${comment.lecture.id} + '/comments/'+${comment.id}}" th:object="${comment}" method="post">
+                            <textarea class="textComment" th:field="*{content}" type="text"/>
                             <input type="submit" value="Submit"/>
                         </form>
                     </div>
